smb cleanup credentials

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -38,4 +38,4 @@ jobs:
           smb_password: ${SMB_PASSWORD}
           EOF
       - run: cd $WORKDIR && ls -al tests/integration/integration_config.yml
-      - run: sshpass -p root ssh root@${SMB_SERVER}
+      - run: sshpass -p root ssh root@10.5.11.179
