--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -26,6 +26,6 @@ jobs:
         # ansible-test needs special directory structure.
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
-      - run: smbclient -n --netbiosname //$SMB_SERVER/$SMB_SHARE -N
+      - run: smbclient -n --netbiosname //$SMB_SERVER/$SMB_SHARE -U $SMB_USERNAME $SMB_PASSWORD -N
       - run: smbclient //$SMB_SERVER$SMB_SHARE -U $SMB_USERNAME $SMB_PASSWORD -N
       - run: ls
