--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -5,6 +5,7 @@ env:
   WORKDIR: /work-dir/ansible_collections/scale_computing/hypercore
 jobs:
 
+
   smb_cleanup:
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
@@ -26,4 +27,5 @@ jobs:
       - run: apt install -y smbclient
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
-      - run: cd $WORKDIR && tests/integration/targets/smb_cleanup.sh
+      - run: cd $WORKDIR/tests
+      - run: ls
