--- a/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
@@ -6,25 +6,6 @@
   loop:
     - XLAB-cloud-init-integration
 
-- name: Create project directory /tmp (if it doesn't exist already)
-  file: state=directory path=/tmp
-
-- name: Download ISO image from http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso and save it into /tmp/TinyCore-vm-integration.iso
-  get_url: url=http://tinycorelinux.net/13.x/x86/release/TinyCore-current.iso dest=/tmp/TinyCore-vm-integration.iso
-
-- name: Delete the ISO image (if it may exist)
-  scale_computing.hypercore.iso: &delete-iso
-    name: "TinyCore-vm-integration.iso"
-    state: absent
-  register: result
-
-- name: Upload ISO image TinyCore-vm-integration.iso to HyperCore API
-  scale_computing.hypercore.iso:
-    name: "TinyCore-vm-integration.iso"
-    source: "/tmp/TinyCore-vm-integration.iso"
-    state: present
-  register: result
-
 # ----------------------------------Job-------------------------------------------------------------------------------------
 - name: Create and start the cloud_init VM
   scale_computing.hypercore.vm:
@@ -43,7 +24,6 @@
         size: "{{ '10.1 GB' | human_to_bytes }}"
       - type: ide_cdrom
         disk_slot: 0
-        iso_name: TinyCore-vm-integration.iso
     nics:
       - vlan: 1
         type: RTL8139
@@ -92,7 +72,7 @@
       - vm_created.record.0.boot_devices.1.type == "RTL8139"
       - vm_created.record.0.boot_devices.0.disk_slot == 0
       - vm_created.record.0.boot_devices.1.vlan == 1
-      - vm_created.record.0.power_state == "started"
+      - vm_created.record.0.power_state == "stopped"
       - vm_created.record.0.machine_type == "BIOS"
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
@@ -113,7 +93,6 @@
         size: "{{ '10.1 GB' | human_to_bytes }}"
       - type: ide_cdrom
         disk_slot: 0
-        iso_name: TinyCore-vm-integration.iso
     nics:
       - vlan: 1
         type: RTL8139
@@ -151,7 +130,7 @@
       - vm_created.record.0.nics.0.type == "RTL8139"
       - vm_created.record.0.nics.1.vlan == 2
       - vm_created.record.0.nics.1.type == "virtio"
-      - vm_created.record.0.disks.2.type == "ide_cdrom"         # This stays, module logic should recognize this is cloud_init IDE from the disk name.
+      - vm_created.record.0.disks.2.type == "ide_cdrom"    # This stays, module logic should recognize this is cloud_init IDE from the disk name.
       - vm_created.record.0.disks.2.disk_slot == 1
       - vm_created.record.0.disks.1.type == "ide_cdrom"
       - vm_created.record.0.disks.1.disk_slot == 0
@@ -162,24 +141,42 @@
       - vm_created.record.0.boot_devices.1.type == "RTL8139"
       - vm_created.record.0.boot_devices.0.disk_slot == 0
       - vm_created.record.0.boot_devices.1.vlan == 1
-      - vm_created.record.0.power_state == "started"
+      - vm_created.record.0.power_state == "stopped"
       - vm_created.record.0.machine_type == "BIOS"
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
 - name: Detach cloud_init ISO from IDE_CDROM
-  scale_computing.hypercore.vm:
-    vm_name: XLAB-cloud-init-integration
-    state: absent
-    items:
-      - type: ide_cdrom
-        disk_slot: 1
+  scale_computing.hypercore.api:
+    action: post
+    endpoint: /rest/v1/VirDomainBlockDevice/{{ vm_created.record.0.disks.2.uuid }}
+    data:
+      path: ""
+      name: ""
+      type: IDE_CDROM
+      capacity: 0
   register: iso_detached
 - ansible.builtin.assert:
     that:
       - iso_detached is changed
       - iso_detached is succeeded
 
-- name: Remove IDE_CDROM with detached cloud_init ISO
+- name: Get XLAB-cloud-init-integration info
+  scale_computing.hypercore.api:
+    action: get
+    endpoint: /rest/v1/VirDomain/{{vm_created.record.0.uuid}}
+  register: result
+- ansible.builtin.assert:
+    that:
+      - result.record | length == 1
+      - result.record.0.blockDevs | length == 3
+      - result.record.0.blockDevs.2.type == "IDE_CDROM"
+      - result.record.0.blockDevs.2.slot == 1
+      - result.record.0.blockDevs.1.type == "IDE_CDROM"
+      - result.record.0.blockDevs.1.slot == 0
+      - result.record.0.blockDevs.0.type == "VIRTIO_DISK"
+      - result.record.0.blockDevs.0.slot == 0
+
+- name: Remove unused detached cloud init disk
   scale_computing.hypercore.vm:
     vm_name: XLAB-cloud-init-integration
     description: Demo VM
@@ -196,7 +193,6 @@
         size: "{{ '10.1 GB' | human_to_bytes }}"
       - type: ide_cdrom
         disk_slot: 0
-        iso_name: TinyCore-vm-integration.iso
     nics:
       - vlan: 1
         type: RTL8139
@@ -228,7 +224,7 @@
       - vm_created.record.0.tags == ["Xlab"]
       - vm_created.record.0.vcpu == 2
       - vm_created.record.0.vm_name == "XLAB-cloud-init-integration"
-      - vm_created.record.0.disks | length == 2
+      - vm_created.record.0.disks | length == 2     # Cloud init disk was removed, since ISO was detached.
       - vm_created.record.0.nics | length == 2
       - vm_created.record.0.nics.0.vlan == 1
       - vm_created.record.0.nics.0.type == "RTL8139"
@@ -243,11 +239,10 @@
       - vm_created.record.0.boot_devices.1.type == "RTL8139"
       - vm_created.record.0.boot_devices.0.disk_slot == 0
       - vm_created.record.0.boot_devices.1.vlan == 1
-      - vm_created.record.0.power_state == "started"
+      - vm_created.record.0.power_state == "stopped"
       - vm_created.record.0.machine_type == "BIOS"
 
-# ----------------------------------Idempotence check------------------------------------------------------------------------
-- name: Remove IDE_CDROM with detached cloud_init ISO (Idempotence)
+- name: Remove unused detached cloud init disk (Idempotence)
   scale_computing.hypercore.vm:
     vm_name: XLAB-cloud-init-integration
     description: Demo VM
@@ -264,7 +259,6 @@
         size: "{{ '10.1 GB' | human_to_bytes }}"
       - type: ide_cdrom
         disk_slot: 0
-        iso_name: TinyCore-vm-integration.iso
     nics:
       - vlan: 1
         type: RTL8139
@@ -296,7 +290,7 @@
       - vm_created.record.0.tags == ["Xlab"]
       - vm_created.record.0.vcpu == 2
       - vm_created.record.0.vm_name == "XLAB-cloud-init-integration"
-      - vm_created.record.0.disks | length == 2
+      - vm_created.record.0.disks | length == 2     # Cloud init disk was removed, since ISO was detached.
       - vm_created.record.0.nics | length == 2
       - vm_created.record.0.nics.0.vlan == 1
       - vm_created.record.0.nics.0.type == "RTL8139"
@@ -311,5 +305,5 @@
       - vm_created.record.0.boot_devices.1.type == "RTL8139"
       - vm_created.record.0.boot_devices.0.disk_slot == 0
       - vm_created.record.0.boot_devices.1.vlan == 1
-      - vm_created.record.0.power_state == "started"
+      - vm_created.record.0.power_state == "stopped"
       - vm_created.record.0.machine_type == "BIOS"
