--- a/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
@@ -9,7 +9,7 @@
 
 # ----------------------------------Job-------------------------------------------------------------------------------------
 - name: Create the XLAB-cloud-init-integration
-  scale_computing.hypercore.vm:
+  scale_computing.hypercore.vm: &cloud-init-integration
     vm_name: XLAB-cloud-init-integration
     description: Demo VM
     state: present
@@ -77,7 +77,7 @@
       - vm_created.record.0.machine_type == "BIOS"
 
 - name: Create and start the XLAB-cloud-init-integration-2
-  scale_computing.hypercore.vm:
+  scale_computing.hypercore.vm: &cloud-init-integration-2
     vm_name: XLAB-cloud-init-integration-2
     description: Demo VM
     state: present
@@ -146,43 +146,7 @@
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
 - name: Create the XLAB-cloud-init-integration (Idempotence)
-  scale_computing.hypercore.vm:
-    vm_name: XLAB-cloud-init-integration
-    description: Demo VM
-    state: present
-    tags:
-      - Xlab
-    memory: "{{ '512 MB' | human_to_bytes }}"
-    vcpu: 2
-    attach_guest_tools_iso: true
-    power_state: stop
-    disks:
-      - type: virtio_disk
-        disk_slot: 0
-        size: "{{ '10.1 GB' | human_to_bytes }}"
-      - type: ide_cdrom
-        disk_slot: 0
-    nics:
-      - vlan: 1
-        type: RTL8139
-      - vlan: 2
-        type: virtio
-    boot_devices:
-      - type: virtio_disk
-        disk_slot: 0
-      - type: nic
-        nic_vlan: 1
-    cloud_init:         # This should be ignored by the API on the second run, no more disks should be created.
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
-    machine_type: BIOS
+  scale_computing.hypercore.vm: *cloud-init-integration
   register: vm_created
 - ansible.builtin.assert:
     that:
@@ -213,7 +177,97 @@
       - vm_created.record.0.power_state == "stopped"
       - vm_created.record.0.machine_type == "BIOS"
 
+- name: Create the XLAB-cloud-init-integration without cloud init (Idempotence) # Test without cloud init parameter to se if changes happen.
+  scale_computing.hypercore.vm:
+    vm_name: XLAB-cloud-init-integration
+    description: Demo VM
+    state: present
+    tags:
+      - Xlab
+    memory: "{{ '512 MB' | human_to_bytes }}"
+    vcpu: 2
+    attach_guest_tools_iso: true
+    power_state: stop
+    disks:
+      - type: virtio_disk
+        disk_slot: 0
+        size: "{{ '10.1 GB' | human_to_bytes }}"
+      - type: ide_cdrom
+        disk_slot: 0
+    nics:
+      - vlan: 1
+        type: RTL8139
+      - vlan: 2
+        type: virtio
+    boot_devices:
+      - type: virtio_disk
+        disk_slot: 0
+      - type: nic
+        nic_vlan: 1
+    machine_type: BIOS
+  register: vm_created
+- ansible.builtin.assert:
+    that:
+      - vm_created is not changed
+      - vm_created is succeeded
+      - vm_created.record.0.description == "Demo VM"
+      - vm_created.record.0.memory == 536870912
+      - vm_created.record.0.tags == ["Xlab"]
+      - vm_created.record.0.vcpu == 2
+      - vm_created.record.0.vm_name == "XLAB-cloud-init-integration"
+      - vm_created.record.0.disks | length == 3     # Cloud init creates an IDE_CDROM disk, on first available slot.
+      - vm_created.record.0.nics | length == 2
+      - vm_created.record.0.nics.0.vlan == 1
+      - vm_created.record.0.nics.0.type == "RTL8139"
+      - vm_created.record.0.nics.1.vlan == 2
+      - vm_created.record.0.nics.1.type == "virtio"
+      - vm_created.record.0.disks.2.type == "ide_cdrom"
+      - vm_created.record.0.disks.2.disk_slot == 1
+      - vm_created.record.0.disks.1.type == "ide_cdrom"
+      - vm_created.record.0.disks.1.disk_slot == 0
+      - vm_created.record.0.disks.0.type == "virtio_disk"
+      - vm_created.record.0.disks.0.disk_slot == 0
+      - vm_created.record.0.boot_devices | length == 2
+      - vm_created.record.0.boot_devices.0.type == "virtio_disk"
+      - vm_created.record.0.boot_devices.1.type == "RTL8139"
+      - vm_created.record.0.boot_devices.0.disk_slot == 0
+      - vm_created.record.0.boot_devices.1.vlan == 1
+      - vm_created.record.0.power_state == "stopped"
+      - vm_created.record.0.machine_type == "BIOS"
+
 - name: Create and start the XLAB-cloud-init-integration-2 (Idempotence)
+  scale_computing.hypercore.vm: *cloud-init-integration-2
+  register: vm_created_2
+- ansible.builtin.assert:
+    that:
+      - vm_created_2 is not changed
+      - vm_created_2 is succeeded
+      - vm_created_2.record.0.description == "Demo VM"
+      - vm_created_2.record.0.memory == 536870912
+      - vm_created_2.record.0.tags == ["Xlab"]
+      - vm_created_2.record.0.vcpu == 2
+      - vm_created_2.record.0.vm_name == "XLAB-cloud-init-integration-2"
+      - vm_created_2.record.0.disks | length == 3     # Cloud init creates an IDE_CDROM disk, on first available slot.
+      - vm_created_2.record.0.nics | length == 2
+      - vm_created_2.record.0.nics.0.vlan == 1
+      - vm_created_2.record.0.nics.0.type == "RTL8139"
+      - vm_created_2.record.0.nics.1.vlan == 2
+      - vm_created_2.record.0.nics.1.type == "virtio"
+      - vm_created_2.record.0.disks.2.type == "ide_cdrom"
+      - vm_created_2.record.0.disks.2.disk_slot == 1
+      - vm_created_2.record.0.disks.1.type == "ide_cdrom"
+      - vm_created_2.record.0.disks.1.disk_slot == 0
+      - vm_created_2.record.0.disks.0.type == "virtio_disk"
+      - vm_created_2.record.0.disks.0.disk_slot == 0
+      - vm_created_2.record.0.boot_devices | length == 2
+      - vm_created_2.record.0.boot_devices.0.type == "virtio_disk"
+      - vm_created_2.record.0.boot_devices.1.type == "RTL8139"
+      - vm_created_2.record.0.boot_devices.0.disk_slot == 0
+      - vm_created_2.record.0.boot_devices.1.vlan == 1
+      - vm_created_2.record.0.power_state == "started"
+      - vm_created_2.record.0.machine_type == "BIOS"
+
+- name: Create and start the XLAB-cloud-init-integration-2 without cloud init (Idempotence) # Test without cloud init parameter to se if changes happen.
   scale_computing.hypercore.vm:
     vm_name: XLAB-cloud-init-integration-2
     description: Demo VM
@@ -240,16 +294,6 @@
         disk_slot: 0
       - type: nic
         nic_vlan: 1
-    cloud_init:
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
     machine_type: BIOS
   register: vm_created_2
 - ansible.builtin.assert:
@@ -314,7 +358,7 @@
       - result.record.0.blockDevs.0.slot == 0
 
 - name: Remove unused detached cloud init disk XLAB-cloud-init-integration
-  scale_computing.hypercore.vm:
+  scale_computing.hypercore.vm: &cloud-init-integration-remove
     vm_name: XLAB-cloud-init-integration
     description: Demo VM
     state: present
@@ -340,16 +384,6 @@
         disk_slot: 0
       - type: nic
         nic_vlan: 1
-    cloud_init:
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
     machine_type: BIOS
   register: vm_created
 - ansible.builtin.assert:
@@ -381,43 +415,7 @@
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
 - name: Remove unused detached cloud init disk XLAB-cloud-init-integration (Idempotence)
-  scale_computing.hypercore.vm:
-    vm_name: XLAB-cloud-init-integration
-    description: Demo VM
-    state: present
-    tags:
-      - Xlab
-    memory: "{{ '512 MB' | human_to_bytes }}"
-    vcpu: 2
-    attach_guest_tools_iso: true
-    power_state: stop
-    disks:
-      - type: virtio_disk
-        disk_slot: 0
-        size: "{{ '10.1 GB' | human_to_bytes }}"
-      - type: ide_cdrom
-        disk_slot: 0
-    nics:
-      - vlan: 1
-        type: RTL8139
-      - vlan: 2
-        type: virtio
-    boot_devices:
-      - type: virtio_disk
-        disk_slot: 0
-      - type: nic
-        nic_vlan: 1
-    cloud_init:
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
-    machine_type: BIOS
+  scale_computing.hypercore.vm: *cloud-init-integration-remove
   register: vm_created
 - ansible.builtin.assert:
     that:
@@ -479,7 +477,7 @@
       - result.record.0.blockDevs.0.slot == 0
 
 - name: Remove unused detached cloud init disk XLAB-cloud-init-integration-2
-  scale_computing.hypercore.vm:
+  scale_computing.hypercore.vm: &cloud-init-integration-remove-2
     vm_name: XLAB-cloud-init-integration-2
     description: Demo VM
     state: present
@@ -507,16 +505,6 @@
         disk_slot: 0
       - type: nic
         nic_vlan: 1
-    cloud_init:
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
     machine_type: BIOS
   register: vm_created_2
 - ansible.builtin.assert:
@@ -547,45 +535,7 @@
 
 # ----------------------------------Idempotence check------------------------------------------------------------------------
 - name: Remove unused detached cloud init disk XLAB-cloud-init-integration-2 (Idempotence)
-  scale_computing.hypercore.vm:
-    vm_name: XLAB-cloud-init-integration-2
-    description: Demo VM
-    state: present
-    tags:
-      - Xlab
-    memory: "{{ '512 MB' | human_to_bytes }}"
-    vcpu: 2
-    attach_guest_tools_iso: true
-    power_state: start
-    shutdown_timeout: 10
-    force_reboot: true
-    disks:
-      - type: virtio_disk
-        disk_slot: 0
-        size: "{{ '10.1 GB' | human_to_bytes }}"
-      - type: ide_cdrom
-        disk_slot: 0
-    nics:
-      - vlan: 1
-        type: RTL8139
-      - vlan: 2
-        type: virtio
-    boot_devices:
-      - type: virtio_disk
-        disk_slot: 0
-      - type: nic
-        nic_vlan: 1
-    cloud_init:
-      user_data:
-        is_this: "yes"
-        valid:
-          - "yaml"
-          - "expression?"
-      meta_data:
-        this_data:
-          - "is"
-          - "very meta"
-    machine_type: BIOS
+  scale_computing.hypercore.vm: *cloud-init-integration-remove-2
   register: vm_created_2
 - ansible.builtin.assert:
     that:
