--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -7,6 +7,8 @@ jobs:
 
 
   smb_cleanup:
+    needs:
+      - integration-test
     runs-on: [self-hosted]
     container: python:3.10-slim-buster
     env:
@@ -19,6 +21,12 @@ jobs:
       SMB_PASSWORD: ${{ secrets.SMB_PASSWORD }}
       ANSIBLE_COLLECTIONS_PATH: /work-dir
     steps:
-      - run: apt-get update -y
-      - run: apt-get install -y iputils-ping
-      - run: ping 192.168.1.248
+      - name: Checkout
+        uses: actions/checkout@v3
+      - run: pip3 install -r sanity.requirements -r test.requirements -r docs.requirements
+      - run: apt update
+      - run: apt install -y git make
+      - run: apt install -y smbclient
+      - run: mkdir -p $WORKDIR
+      - run: cp -a ./  $WORKDIR
+      - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
