--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -25,6 +25,7 @@ jobs:
       - run: apt update
       - run: apt install -y git make
       - run: apt install -y smbclient
+      - run: apt install -y iputils-ping
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
