--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -29,6 +29,6 @@ jobs:
       - run: mkdir -p $WORKDIR
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
-      - run: ping -c 4 192.168.1.248
+      - run: ping -c 4 $SMB_SERVER
       - run: smbclient -L 192.168.1.248
       - run: smbclient -I --ip-address=192.168.1.248 -U $SMB_USERNAME $SMB_PASSWORD -N
