--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -30,7 +30,7 @@ jobs:
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
       - run: ping -c 4 192.168.1.248
-      - run: smbclient -n --netbiosname=SMB_SERVER
+      - run: smbclient -n SMB_SERVER
       - run: smbclient -n --netbiosname=$SMB_SERVER
       - run: smbclient -L SMB_SERVER
       - run: smbclient -L 192.168.1.248
