--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -30,4 +30,4 @@ jobs:
       - run: cp -a ./  $WORKDIR
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
       - run: ping -c 4 192.168.1.248
-      - run: smbclient //SMB_SERVERSMB_SHARE -U SMB_USERNAME SMB_PASSWORD -N
+      - run: smbclient //SMB_SERVER/SMB_SHARE -U SMB_USERNAME SMB_PASSWORD -N
