--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -31,3 +31,4 @@ jobs:
       - run: cd $WORKDIR/tests/integration/cleanup && ./smb_cleanup.sh
       - run: ping -c 4 192.168.1.248
       - run: smbclient -m SMB3 -L 192.168.1.248 -U administrator%Scale2020!
+      - run: smbclient -m SMB3 -L 192.168.1.248 -U administrator -N
