--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -34,6 +34,6 @@ jobs:
       - run: dig 192.168.1.248
       - run: smbclient -L 192.168.1.248 -U administrator%Scale2020!
       - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
-      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
+      - run: smbclient -L ${{ secrets.SMB_SERVER }} -U administrator%Scale2020!
       - run: dig ${{ secrets.SMB_SERVER }}
-      - run: smbclient //${{ secrets.SMB_SERVER }}${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
+      - run: smbclient //${{ secrets.SMB_SERVER }}/${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
