--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -34,8 +34,8 @@ jobs:
       - run: ping -c 4 ${{ secrets.SMB_SERVER }}
       - run: dig 192.168.1.248
       - run: smbclient -L 192.168.1.248 -U remotedc/administrator%Scale2020!
-      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls
-      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && cd tests && ls
+      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && ls -a
+      - run: smbclient //192.168.1.248/azure-sync -U administrator%Scale2020! && cd tests && ls -a
       - run: smbclient -L ${{ secrets.SMB_SERVER }} -U ${{ secrets.SMB_USERNAME }}%${{ secrets.SMB_PASSWORD }}
       - run: dig ${{ secrets.SMB_SERVER }}
       - run: smbclient //${{ secrets.SMB_SERVER }} ${{ secrets.SMB_SHARE }} -U administrator%Scale2020! && ls
