--- a/tests/integration/targets/vm/tasks/01_main.yml
+++ b/tests/integration/targets/vm/tasks/01_main.yml
@@ -43,7 +43,7 @@
           - mytag2
         memory: "{{ '512 MB' | human_to_bytes }}"
         vcpu: 2
-        attach_guest_tools_iso: true
+        attach_guest_tools_iso: false
         power_state: start
         disks:
           - type: virtio_disk
