--- a/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
+++ b/tests/integration/targets/vm_git_issues/tasks/issue_41_cloud_init_disks.yml
@@ -17,7 +17,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: stop
     disks:
       - type: virtio_disk
@@ -88,7 +88,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: start
     disks:
       - type: virtio_disk
@@ -193,7 +193,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: stop
     disks:
       - type: virtio_disk
@@ -287,7 +287,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: start
     disks:
       - type: virtio_disk
@@ -381,7 +381,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: stop
     disks:
       - type: virtio_disk
@@ -503,7 +503,7 @@
       - Xlab
     memory: "{{ '512 MB' | human_to_bytes }}"
     vcpu: 2
-    attach_guest_tools_iso: true
+    attach_guest_tools_iso: false
     power_state: start
     force_reboot: true
     shutdown_timeout: 10
