--- a/changelogs/fragments/release_110.yml
+++ b/changelogs/fragments/release_110.yml
@@ -1,8 +1,8 @@
 release_summary: Feature release with minor changes and small bugfixes.
 minor_changes:
-  - "'source' option added to api module."
-  - "'put' now implemented and added to 'action' option in api module."
-  - "'machine_type' option added to vm module."
+  - "Added 'source' option to api module."
+  - "Implemented 'put' and added to 'action' option in api module."
+  - "Added 'machine_type' option to vm module."
 bugfixes:
   - "Timeout is now properly applied and overrides the default."
   - "Option 'attach_guest_tools' now works as intended with Windows systems."
