--- a/tests/integration/targets/api/tasks/main.yml
+++ b/tests/integration/targets/api/tasks/main.yml
@@ -3,8 +3,8 @@
     SC_HOST: "{{ sc_host }}"
     SC_USERNAME: "{{ sc_username }}"
     SC_PASSWORD: "{{ sc_password }}"
-    SC_TIMEOUT: "{{ sc_timeout|default(None) or 10 }}"
+    SC_TIMEOUT: "{{ sc_timeout }}"
 
   block:
-    - include_tasks: 01_main.yml
+#    - include_tasks: 01_main.yml
     - include_tasks: 02_corner_cases.yml
